DESCRIPTION, LICENSE and README

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,10 +4,32 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+# JuliaCall for Seamless Integration of R and Julia
+
+Package JuliaCall is an R interface to 'Julia',
+which is a high-level, high-performance dynamic programming language
+for numerical computing, see <https://julialang.org/> for more information.
+    
+[![Travis-CI Build Status](https://travis-ci.org/Non-Contradiction/JuliaCall.svg?branch=master)](https://travis-ci.org/Non-Contradiction/JuliaCall)
+
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "README-"
 )
+```
+
+```{r}
+library(JuliaCall)
+
+julia <- julia_setup()
+```
+
+```{r}
+julia$cmd("println(sqrt(2))")
+
+julia$eval_string("sqrt(2)")
+
+julia$call("sqrt", 2)
 ```
