julia$cmd is renamed to julia$.cmd, should be used internally as much as possible, julia$command is more safe.

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ library(JuliaCall)
 
 julia <- julia_setup()
 
-julia$cmd("println(sqrt(2))")
+julia$command("println(sqrt(2))")
 
 julia$eval_string("sqrt(2)")
 
