New README with more details.

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,12 +20,20 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Installation
+
+You can get `JuliaCall` by
+```{r eval=FALSE}
+devtools::install_github("Non-Contradiction/JuliaCall")
+```
+
+# Basic Usage
 ```{r}
 library(JuliaCall)
 
 julia <- julia_setup()
 
-julia$command("println(sqrt(2))")
+julia$command("a = sqrt(2)"); julia$eval_string("a")
 
 julia$eval_string("sqrt(2)")
 
@@ -35,3 +43,39 @@ julia$eval_string("sqrt")(2)
 
 2 %>J% sqrt
 ```
+# JuliaCall for R Package Developers
+
+If you are interested in developing an R package which is an interface for
+a Julia package, `JuliaCall` is an ideal choice for that!
+
+Basically you only need to find the Julia function or Julia module you want to have in `R`
+and then just `using` the module and `call` the function.
+An example is `ipoptjlr`, which can be found at <https://github.com/Non-Contradiction/ipoptjlr>.
+
+If you have any issues in developing an `R` package using `JuliaCall`,
+you may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>.
+Or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
+
+# Suggestion and Issue Reporting
+`JuliaCall` is under active development now.
+Any suggestion or issue reporting is welcome!
+You may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>.
+Or email me at <lch34677@gmail.com> or <cxl508@psu.edu>.
+
+And if you encounter some issues which crash `R` or `RStudio`,
+then you may have met segfault errors. 
+I am very sorry.
+And I am trying my best to remove errors like that.
+It will be much appreciated if you can 
+
+- download the source of `JuliaCall` from Github, 
+- open `JuliaCall.Rproj` in your RStudio or open `R` from the directory where you download the source of `JuliaCall`,
+- run `devtools::check()` to see the result of `R CMD check` for `JuliaCall` on your machine,
+- and paste the result to the issue report.
+
+
+
+
+
+
+
