--- a/README.Rmd
+++ b/README.Rmd
@@ -6,11 +6,12 @@ output: github_document
 
 # JuliaCall for Seamless Integration of R and Julia
 
+[![Travis-CI Build Status](https://travis-ci.org/Non-Contradiction/JuliaCall.svg?branch=master)](https://travis-ci.org/Non-Contradiction/JuliaCall)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/Non-Contradiction/JuliaCall?branch=master&svg=true)](https://ci.appveyor.com/project/Non-Contradiction/JuliaCall)
+
 Package JuliaCall is an R interface to 'Julia',
 which is a high-level, high-performance dynamic programming language
 for numerical computing, see <https://julialang.org/> for more information.
-    
-[![Travis-CI Build Status](https://travis-ci.org/Non-Contradiction/JuliaCall.svg?branch=master)](https://travis-ci.org/Non-Contradiction/JuliaCall)
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
