README updated. [skip ci]

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,14 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can get `JuliaCall` by
+`JuliaCall` is on CRAN now! To use package `JuliaCall`, you first have to install `Julia`
+<https://julialang.org/> on your computer, and then you can install `JuliaCall` just like
+any other R packages by
+```{r eval=FALSE}
+install.packages("JuliaCall")
+```
+
+You can get the development version of `JuliaCall` by
 ```{r eval=FALSE}
 devtools::install_github("Non-Contradiction/JuliaCall")
 ```
