Updated README: the examples for julia_assign and link for github pages.

--- a/README.Rmd
+++ b/README.Rmd
@@ -57,6 +57,12 @@ julia_call("sqrt", 2)
 julia$eval_string("sqrt")(2)
 julia_eval_string("sqrt")(2)
 
+julia$assign("x", sqrt(2)); julia$eval_string("x")
+julia_assign("x", sqrt(2)); julia_eval_string("x")
+
+julia$assign("rsqrt", sqrt); julia$call("rsqrt", 2)
+julia_assign("rsqrt", sqrt); julia_call("rsqrt", 2)
+
 2 %>J% sqrt
 
 ## You can use `julia$exists` as `exists` in R to test
@@ -90,14 +96,17 @@ julia_library("Optim")
 
 ## How to Get Help?
 
-One way to get help is just using `julia$help` like the following example:
+- One way to get help for julia functions is just using `julia$help` like the following example:
 
 ```{r}
 julia$help("sqrt")
 julia_help("sqrt")
 ```
 
-And you are more than welcome to contact me about `JuliaCall`
+- The GitHub Pages for this repository host the documentation for the development
+version of `JuliaCall`: <https://non-contradiction.github.io/JuliaCall/>.
+
+- And you are more than welcome to contact me about `JuliaCall`
 at <lch34677@gmail.com> or <cxl508@psu.edu>.
 
 ## JuliaCall for R Package Developers
