Update README. Add the picture. Use cache. And more concise.

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+![](README-JuliaCall.png)
+
 ## Installation
 
 `JuliaCall` is on CRAN now! To use package `JuliaCall`, you first have to install `Julia`
@@ -37,7 +39,7 @@ devtools::install_github("Non-Contradiction/JuliaCall")
 ```
 
 ## Basic Usage
-```{r}
+```{r, cache=TRUE}
 library(JuliaCall)
 
 ## Do initial setup
@@ -46,52 +48,30 @@ julia <- julia_setup()
 
 ## Different ways for using Julia to calculate sqrt(2)
 
-julia$command("a = sqrt(2)"); julia$eval_string("a")
+# julia$command("a = sqrt(2)"); julia$eval_string("a")
 julia_command("a = sqrt(2)"); julia_eval_string("a")
-
-julia$eval_string("sqrt(2)")
 julia_eval_string("sqrt(2)")
-
-julia$call("sqrt", 2)
 julia_call("sqrt", 2)
-
-julia$eval_string("sqrt")(2)
 julia_eval_string("sqrt")(2)
-
-julia$assign("x", sqrt(2)); julia$eval_string("x")
 julia_assign("x", sqrt(2)); julia_eval_string("x")
-
-julia$assign("rsqrt", sqrt); julia$call("rsqrt", 2)
 julia_assign("rsqrt", sqrt); julia_call("rsqrt", 2)
-
 2 %>J% sqrt
 
 ## You can use `julia$exists` as `exists` in R to test
 ## whether a function or name exists in Julia or not
 
-julia$exists("sqrt")
 julia_exists("sqrt")
-
-julia$exists("c")
 julia_exists("c")
 
 ## You can use `julia$help` to get help for Julia functions
 
-julia$help("sqrt")
 julia_help("sqrt")
 
 ## Functions related to installing and using Julia packages
 
-julia$install_package("Optim")
 julia_install_package("Optim")
-
-julia$install_package_if_needed("Optim")
 julia_install_package_if_needed("Optim")
-
-julia$installed_package("Optim")
 julia_installed_package("Optim")
-
-julia$library("Optim")
 julia_library("Optim")
 ```
 
@@ -99,8 +79,7 @@ julia_library("Optim")
 
 - One way to get help for julia functions is just using `julia$help` like the following example:
 
-```{r}
-julia$help("sqrt")
+```{r, cache=TRUE}
 julia_help("sqrt")
 ```
 
