--- a/vignettes/Gallery.Rmd
+++ b/vignettes/Gallery.Rmd
@@ -11,11 +11,11 @@ vignette: >
 
 ## Basic Usage
 
-<img src="JuliaCall.png" style="width: 600px;"/>
+<img src="JuliaCall.png" style="width: 800px;"/>
 
 ## Use RCall.jl together with JuliaCall
 
-<img src="RCall.png" style="width: 600px;"/>
+<img src="RCall.png" style="width: 800px;"/>
 
 If you set the option of `useRCall = TRUE` in `julia_setup()`,
 which is the default setting.
@@ -27,10 +27,17 @@ and you can go into R REPL mode in `julia_console()` by simply pressing
 
 ## Parallel Computation in JuliaCall
 
-<img src="parallel.png" style="width: 600px;"/>
+<img src="parallel.png" style="width: 800px;"/>
 
 Note that due to the issue 14577 in julia v0.6.0,
 it is not possible to do parallel computation using `JuliaCall`
 and julia v0.6.0, but the issue is already fixed,
 and the parallel functionality should work using
 `JuliaCall` and future release of julia.
+
+## JuliaCall in Jupyter R Notebook
+
+For the whole notebook, please go to
+<https://nbviewer.jupyter.org/gist/Non-Contradiction/0ee469895d828b98cfde5fa853f84434>.
+
+<img src="notebook.png" style="width: 800px;"/>
