--- a/vignettes/JuliaCall_in_RMarkdown.Rmd
+++ b/vignettes/JuliaCall_in_RMarkdown.Rmd
@@ -23,14 +23,14 @@ knitr::knit_engines$set(julia = JuliaCall::eng_juliacall)
 ```
 
 And in the julia code chunk, just use 
-"```{julia}" or "```{r, engine='julia'}".
+"```{julia}".
 
 Below is how it looks like when using `JuliaCall`
 as language engine for Julia. 
 
 ## How Does JuliaCall in R Markdown Look Like?
 
-```{julia}
+```{julia, cache=TRUE}
 ## This is a julia language chunk.
 ## In julia, the command without ending semicolon will trigger the display
 ## so is JuliaCall package. 
@@ -42,10 +42,43 @@ a = sqrt(2);
 ## And lots of different types of display are supported in JuliaCall.
 ## Like markdown and plots.
 @doc sqrt
-using Gadfly
-Gadfly.plot(y = [1 2 3])
+```
+
+### Support for `Plots.jl` {.tabset}
+
+`Plots.jl` is an easy to use and powerful julia package for plotting,
+<https://github.com/JuliaPlots/Plots.jl>.
+And `JuliaCall` supports `Plots.jl` of cource!!
+
+```{julia, cache=TRUE}
 using Plots
+```
+
+#### PyPlot backend
+
+```{julia, cache=TRUE}
 pyplot()
+Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
+```
+
+#### GR backend
+
+```{julia, cache=TRUE}
+gr()
+Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
+```
+
+#### PlotlyJS backend
+
+```{julia, cache=TRUE}
+plotlyjs()
+Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
+```
+
+#### Plotly backend
+
+```{julia, cache=TRUE}
+plotly()
 Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
 ```
 
@@ -57,15 +90,12 @@ using `JuliaCall`, for example:
 ## This is a R language chunk.
 ## In the previous julia chunk, we define variable a, 
 ## we can use functions in JuliaCall to get access to it.
-JuliaCall::julia_eval_string("a")
+JuliaCall::julia_eval("a")
 
 ## And you can also get access to Julia libraries and functions.
 JuliaCall::julia_library("Gadfly")
 JuliaCall::julia_call("Gadfly.plot", y = c(1:3), 
                       need_return = FALSE, show_value = TRUE)
-JuliaCall::julia_library("Plots")
-JuliaCall::julia_command("pyplot()")
-JuliaCall::julia_command("Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))")
 ```
 
 
