Updates on JuliaCall in Jupyter R Notebook example. [skip ci]

--- a/vignettes/JuliaCall_in_Jupyter_R_Notebook.Rmd
+++ b/vignettes/JuliaCall_in_Jupyter_R_Notebook.Rmd
@@ -13,18 +13,12 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<img src="notebook.png" style="width: 800px;"/>
+For the original notebook, please go to
+<https://nbviewer.jupyter.org/github/Non-Contradiction/JuliaCall/blob/master/example/JuliaCall_in_Jupyter_R_Notebook.ipynb>.
 
-For the whole notebook, please go to
-<https://nbviewer.jupyter.org/gist/Non-Contradiction/0ee469895d828b98cfde5fa853f84434>.
-
-Here I generate a markdown file from the notebook and include
+Here I generate a markdown file from part of the notebook and include
 it in this vignette.
 
 ```{r, results='asis', echo=FALSE}
-ls <- readLines("JuliaCall_in_Jupyter_R_Notebook1.md")
-for (l in ls) {
-    cat(l)
-    cat("\n")
-}
+cat(paste(readLines("JuliaCall_in_Jupyter_R_Notebook1.md"), collapse = "\n"))
 ```
