--- a/vignettes/Gallery.Rmd
+++ b/vignettes/Gallery.Rmd
@@ -4,7 +4,7 @@ author: "Changcheng Li"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{JuliaCall Gallery}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
