--- a/vignettes/JuliaCall_in_Jupyter_R_Notebook.Rmd
+++ b/vignettes/JuliaCall_in_Jupyter_R_Notebook.Rmd
@@ -4,7 +4,7 @@ author: "Changcheng Li"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{JuliaCall in Jupyter R Notebook}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
