--- a/vignettes/JuliaCall_in_RMarkdown.Rmd
+++ b/vignettes/JuliaCall_in_RMarkdown.Rmd
@@ -6,12 +6,6 @@ output:
   rmarkdown::html_document
 ---
 
-<style>
-.JuliaDisplay {
-    color: blue;
-}
-</style>
-
 ## Use JuliaCall as Julia Engine in R Markdown
 
 To use `JuliaCall` package for julia engine in R Markdown document.
@@ -58,28 +52,14 @@ using Plots
 
 ```{julia, cache=TRUE}
 pyplot()
-Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
+plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
 ```
 
 #### GR backend
 
 ```{julia, cache=TRUE}
 gr()
-Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
-```
-
-#### PlotlyJS backend
-
-```{julia, cache=TRUE}
-plotlyjs()
-Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
-```
-
-#### Plotly backend
-
-```{julia, cache=TRUE}
-plotly()
-Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
+plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
 ```
 
 ## Get Access to Julia in R Chunk
@@ -87,37 +67,14 @@ Plots.plot(sin,(x->begin sin(2x) end),0,2pi,line=4,leg=false,fill=(0,:orange))
 And you can also get access to julia variables in R code chunk quite easily
 using `JuliaCall`, for example:
 ```{r, cache=TRUE}
+library(JuliaCall)
 ## This is a R language chunk.
 ## In the previous julia chunk, we define variable a, 
 ## we can use functions in JuliaCall to get access to it.
-JuliaCall::julia_eval("a")
+julia_eval("a")
 
 ## And you can also get access to Julia libraries and functions.
-JuliaCall::julia_library("Gadfly")
-JuliaCall::julia_call("Gadfly.plot", y = c(1:3), 
-                      need_return = FALSE, show_value = TRUE)
+julia_library("Plots")
+julia_command("gr()")
+julia_command("plot(Plots.fakedata(50,5),w=3)")
 ```
-
-
-## Current Limitations
-
-Currently only R Markdown html output is fully supported by
-`JuliaCall`.
-
-## Custom Style of Julia Display in R Markdown Using CSS
-
-When using `JuliaCall` in R Markdown,
-every julia display will be wrapped in 
-a div with `class = "JuliaDisplay"`,
-so you could customize the looking of julia display using css,
-for example, I use
-
-```
-    <style>
-    .JuliaDisplay {
-        color: blue;
-    }
-    </style>
-```
-
-in this document.
