More examples of packages using JuliaCall.

--- a/README.Rmd
+++ b/README.Rmd
@@ -127,7 +127,12 @@ a Julia package, `JuliaCall` is an ideal choice for that!
 
 Basically you only need to find the Julia function or Julia module you want to have in `R`
 and then just `using` the module and `call` the function.
-An example is `ipoptjlr`, which can be found at <https://github.com/Non-Contradiction/ipoptjlr>.
+Several examples are:
+
+- [`diffeqr`](https://github.com/JuliaDiffEq/diffeqr) is a package for solving differential equations in `R`. It utilizes [DifferentialEquations.jl](http://docs.juliadiffeq.org/latest/) for its core routines to give high performance solving of ordinary differential equations (ODEs), stochastic differential equations (SDEs), delay differential equations (DDEs), and differential-algebraic equations (DAEs) directly in `R`.
+- [`convexjlr`](https://github.com/Non-Contradiction/convexjlr) is an `R` package for Disciplined Convex Programming (DCP) by providing a high level wrapper for `Julia` package [`Convex.jl`](https://github.com/JuliaOpt/Convex.jl). `convexjlr` can solve linear programs, second order cone programs, semidefinite programs, exponential cone programs, mixed-integer linear programs, and some other DCP-compliant convex programs through `Convex.jl`.
+- [`ipoptjlr`](https://github.com/Non-Contradiction/ipoptjlr) provides an `R` interface to the `Ipopt` nonlinear optimization solver. It provides a simple high-level wrapper for `Julia` package [`Ipopt.jl`] (https://github.com/JuliaOpt/Ipopt.jl).
+- [Julia MixedModels from R](http://rpubs.com/dmbates/377897) illustrates how to use `JuliaCall` and `Julia` package [`MixedModels.jl`](https://github.com/dmbates/MixedModels.jl) to build mixed models in `R`.
 
 If you have any issues in developing an `R` package using `JuliaCall`,
 you may report it using the link: <https://github.com/Non-Contradiction/JuliaCall/issues/new>.
