README update for julia v1.0.

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,8 +48,8 @@ To use package `JuliaCall`, you first have to install [`Julia`](https://julialan
 install.packages("JuliaCall")
 ```
 
-Note that currently `Julia v0.6.x` and `Julia v0.7` are supported by `JuliaCall`.
-It's also possible to use `Julia v1.0` with `JuliaCall`, but users need to get the github master of [`RCall.jl`](https://github.com/JuliaInterop/RCall.jl) by `using Pkg; pkg"add RCall"` in `Julia` first.
+Note that currently `Julia v0.6.x`, `Julia v0.7.0` and `Julia v1.0` are all supported by `JuliaCall`.
+But note that some `Julia` packages may not work on `Julia v1.0` and you may need to use `Julia v0.7.0` for transition purposes.
 
 You can get the development version of `JuliaCall` by
 ```{r eval=FALSE}
